2005-06-26  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_intr.c (synth_hardware_init): extract bogomips rating
	for use by HAL_DELAY_US()

	* include/hal_intr.h: add #include of <cyg/hal/var_intr.h> for
	HAL_DELAY_US().

2005-03-11  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_intr.c (synth_hardware_init): allow the platform to
	customize the sigaction structures.

	* include/hal_io.h: add more signal-related definitions

	* cdl/hal_synth.cdl: change the clock calculations, so that users
	only need to specify RTC_PERIOD

2004-12-14  Alexander Neundorf <neundorf@kde.org>
	    Andrew Lunn        <andrew.lunn@ascom.ch>

	* include/hal_io.h: Add cyg_hal_sys_shmget(), cyg_hal_sys_shmat()
	and cyg_hal_sys_shmdt() system calls
	* src/synth_syscalls.c: Implementations of cyg_hal_sys_shmget(), 
	cyg_hal_sys_shmat() and cyg_hal_sys_shmdt(). Moved 
	cyg_hal_sys_mmap() from the flash driver to here.

2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_intr.h (HAL_PLATFORM_RESET): Added missing ;

2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: Add cyg_hal_sys_mkdir() system call
	* include/hal_intr.h: Add HAL_PLATFORM_RESET() macro

2004-07-04  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth.ld: Added the 2ram section needed for flash devices

2004-06-21  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: 
	Add cyg_hal_sys_readdir(), cyg_hal_sys_lstat(), 
        cyg_hal_sys_fstat() system call toegther with their 
        accompanying data structures and file mode bits

2004-06-18  William Donahue  <WDonahue@siriusradio.com>

	* include/hal_io.h (CYG_HAL_SYS_FD_ZERO): Added misisng }

2004-05-27  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: 
	Fix the open/fcntl flags by prepending a leading 0 so that they
	are interpreted correctly as octal instead of decimal.

2004-04-22  Jani Monoses <jani@iv.ro>

	* cdl/hal_synth.cdl :